# kanban-backend

./: pyproject.toml
kanbanbackend/: settings.py  urls.py
user/: views.py
